--- a/deepr.html
+++ b/deepr.html
@@ -324,7 +324,7 @@
     <div class="tooltip" id="tooltip"></div>
 
     <script>
-        const API_URL = 'http://localhost:8000/research';
+        const API_URL = 'https://280cfb04b114.ngrok-free.app/research';
         let isLoading = false;
         let messageCounter = 0;
 
